fix - mapper de item mapeando errado externalId de item de forma errada.